# CXMF

./: .clang-format  CMakeLists.txt
cmake/: dependencies.cmake
include/: CXMF.hpp
src/: CXMF.cpp  main.cpp
